<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/spelling"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="28dp"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hide_btn"
        tools:text="Word" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="53dp"
        app:layout_constraintBottom_toTopOf="@+id/input_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spelling">

        <RadioButton
            android:id="@+id/word1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:checked="true"
            android:text="@string/Word1" />

        <RadioButton
            android:id="@+id/word2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Word2" />

        <RadioButton
            android:id="@+id/word3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Word3" />

        <RadioButton
            android:id="@+id/word4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Word4" />

        <RadioButton
            android:id="@+id/word5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Word5" />

    </RadioGroup>

    <Button
        android:id="@+id/hide_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="17dp"
        android:text="@string/hide"
        app:layout_constraintBottom_toTopOf="@+id/spelling"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="76dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_txt" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="55dp"
        android:inputType="textCapWords"
        android:textAlignment="center"
        android:hint="@string/enter_the_correct_spelling_here"
        app:layout_constraintBottom_toTopOf="@+id/submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:text="Type here..." />

    <Button
        android:id="@+id/setText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_text"
        app:layout_constraintBottom_toTopOf="@+id/spelling"
        app:layout_constraintEnd_toStartOf="@+id/hide_btn"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />


</androidx.constraintlayout.widget.ConstraintLayout>